# hoyo

./: .headroom.yaml  .pre-commit-config.yaml  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  Todo.md  bash-func.sh  cabal.project  default.nix  goto.cabal  hoyo.cabal  hoyo.nix  idea.md  shell.nix
.github/workflows/: check-changelog-on-pr.yml  ci.yml  generate_documentation.yml  haskell-ci.yml  tests.yml
docs/: CHANGELOG.md  HoYo-Bookmark-Internal.html  HoYo-Bookmark.html  HoYo-CLI-Complete.html  HoYo-CLI-Parse.html  HoYo-Command-Internal.html  HoYo-Command.html  HoYo-Config-Internal.html  HoYo-Config.html  HoYo-Env-Internal.html  HoYo-Env.html  HoYo-Internal-Bookmark.html  HoYo-Internal-Command.html  HoYo-Internal-Config.html  HoYo-Internal-Env.html  HoYo-Internal-Parse.html  HoYo-Internal-Types.html  HoYo-Internal-Utils.html  HoYo-Internal-Version.html  HoYo.html  Hoyo-Bookmark.html  Hoyo-CLI-Complete.html  Hoyo-CLI-Parse.html  Hoyo-Command.html  Hoyo-Config.html  Hoyo-Env.html  Hoyo-Internal-Bookmark.html  Hoyo-Internal-Command.html  Hoyo-Internal-Config.html  Hoyo-Internal-Env.html  Hoyo-Internal-Parse.html  Hoyo-Internal-Types.html  Hoyo-Internal-Utils.html  Hoyo-Internal-Version.html  Hoyo-Utils.html  Hoyo.html  README.md  doc-index-46.html  doc-index-95.html  doc-index-A.html  (+24 more)
docs/src/: HoYo.Bookmark.html  HoYo.CLI.Complete.html  HoYo.CLI.Parse.html  HoYo.Command.html  HoYo.Config.html  HoYo.Env.html  HoYo.Internal.Bookmark.html  HoYo.Internal.Command.html  HoYo.Internal.Config.html  HoYo.Internal.Env.html  HoYo.Internal.Parse.html  HoYo.Internal.Types.html  HoYo.Internal.Utils.html  HoYo.Internal.Version.html  HoYo.html  Hoyo.Bookmark.html  Hoyo.CLI.Complete.html  Hoyo.CLI.Parse.html  Hoyo.Command.html  Hoyo.Config.html  Hoyo.Env.html  Hoyo.Internal.Bookmark.html  Hoyo.Internal.Command.html  Hoyo.Internal.Config.html  Hoyo.Internal.Env.html  Hoyo.Internal.Parse.html  Hoyo.Internal.Types.html  Hoyo.Internal.Utils.html  Hoyo.Internal.Version.html  Hoyo.Utils.html  Hoyo.html
exe/: Complete.hs  Main.hs  Parse.hs
headroom-templates/: haskell.mustache
scripts/: deploy  generate_docs.sh  headroom.sh  hoyo.sh  lint.sh  run_tests.sh  undeploy
src/: GoTo.hs  HoYo.hs  Hoyo.hs
src/GoTo/: Bookmark.hs  Command.hs  Config.hs  Settings.hs  Types.hs
src/HoYo/: Bookmark.hs  Command.hs  Config.hs  Env.hs  Settings.hs  Types.hs  Utils.hs  Version.hs
src/HoYo/CLI/: Complete.hs  Parse.hs
src/HoYo/Internal/: Bookmark.hs  Command.hs  Config.hs  Env.hs  Parse.hs  Parse.hs-boot  Types.hs  Utils.hs  Version.hs
src/Hoyo/: Bookmark.hs  Command.hs  Config.hs  Env.hs  Utils.hs
src/Hoyo/CLI/: Complete.hs  Parse.hs  Parse.hs-boot
src/Hoyo/Internal/: Bookmark.hs  Command.hs  Config.hs  Env.hs  Parse.hs  Parse.hs-boot  Types.hs  Utils.hs  Version.hs
test/: Gen.hs  Main.hs
test/HoYo/Test/: Bookmark.hs  Env.hs  Gen.hs  HoYo.hs  Utils.hs
test/HoYo/Test/CLI/: Parse.hs
test/Hoyo/Test/: Bookmark.hs  Env.hs  Gen.hs  Hoyo.hs  Utils.hs
test/Hoyo/Test/CLI/: Parse.hs
