cabal-version:      3.0
name:               goto
version:            0.1.0.0
synopsis:           Bookmark directories for cd
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Frederick Pringle
maintainer:         freddyjepringle@gmail.com
-- copyright:
category:           System
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  GoTo
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable goto
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        goto

    hs-source-dirs:   exe
    default-language: Haskell2010
