cabal-version: 3.0
name:          goto
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    freddyjepringle@gmail.com
author:        Frederick Pringle
synopsis:      Bookmark directories for cd
category:      System
build-type:    Simple

library
    exposed-modules:
        GoTo
        GoTo.Config
        GoTo.Settings
        GoTo.Command
        GoTo.Types
        GoTo.Bookmark

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        tomland >=1.3.3 && <1.4,
        lens-simple >=0.1 && <0.2,
        text >=2.0 && <2.1
    default-extensions:
        OverloadedStrings

executable goto
    main-is:          Main.hs
    hs-source-dirs:   exe
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.14.3.0,
        goto
