cabal-version: 3.0
name:          hoyo
version:       0.1.1.0
license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    freddyjepringle@gmail.com
author:        Frederick Pringle
synopsis:      Bookmark directories for cd
description:
  hoyo is a command-line utility enabling easy bookmarking
  of directory for quick cd-like behaviour.

  See the [github readme](https://github.com/fpringle/hoyo#readme)
  for more information.
homepage:      https://github.com/fpringle/hoyo
category:      System
build-type:    Simple
extra-doc-files: CHANGELOG.md README.md

source-repository head
  type:     git
  location: git://github.com/fpringle/hoyo.git
  branch:   main

source-repository this
  type:     git
  location: git://github.com/fpringle/hoyo.git
  tag:      v0.1.1.0

library
    exposed-modules:
        HoYo
        HoYo.Env
        HoYo.Config
        HoYo.Command
        HoYo.Bookmark

    hs-source-dirs:     src
    other-modules:
        HoYo.Types
        HoYo.Utils
    default-language:   Haskell2010
    default-extensions: OverloadedStrings GeneralizedNewtypeDeriving LambdaCase FlexibleContexts
    ghc-options:        -Wall -Wno-duplicate-exports -Wno-unused-do-bind
    build-depends:
        base >=4 && <5,
        tomland >=1.3.3 && <1.4,
        microlens >=0.4.13 && <0.5,
        microlens-th >=0.4.3 && <0.5,
        text >=2.0 && <2.1,
        mtl >=2.2 && <2.3,
        transformers >= 0.5.6 && <0.6,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.5,
        time >=1.12 && <1.13,
        unordered-containers >=0.2.19 && <0.3

executable hoyo-cli
    main-is:          Main.hs
    hs-source-dirs:   exe
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        optparse-applicative >=0.17 && <0.18,
        directory >=1.3 && <1.4,
        package-version >=0.3 && <1,
        text >=2.0 && <2.1,
        hoyo
    default-extensions: OverloadedStrings LambdaCase

test-suite hoyo-test
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        -- HUnit >=1.6 && <1.7,
        QuickCheck >=2.14 && <2.15,
        text >=2.0 && <2.1,
        filepath >=1.4 && <1.5,
        time >=1.12 && <1.13,
        hoyo
    other-modules:    Gen
    -- other-extensions:
    type:             exitcode-stdio-1.0
    default-extensions: OverloadedStrings
