cabal-version: 3.0
name:          hoyo
version:       0.3.0.0
license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    freddyjepringle@gmail.com
author:        Frederick Pringle
synopsis:      Bookmark directories for cd
description:
  hoyo is a command-line utility enabling easy bookmarking
  of directory for quick cd-like behaviour.

  See the [github readme](https://github.com/fpringle/hoyo#readme)
  for more information.
homepage:      https://github.com/fpringle/hoyo
category:      System
build-type:    Simple
extra-doc-files: CHANGELOG.md README.md

source-repository head
  type:     git
  location: git://github.com/fpringle/hoyo.git
  branch:   main

source-repository this
  type:     git
  location: git://github.com/fpringle/hoyo.git
  tag:      v0.3.0.0

library
    exposed-modules:
        HoYo
        HoYo.Env
        HoYo.Config
        HoYo.Command
        HoYo.Bookmark
        HoYo.CLI.Parse
        HoYo.CLI.Complete
        HoYo.Internal.Env
        HoYo.Internal.Config
        HoYo.Internal.Command
        HoYo.Internal.Bookmark
        HoYo.Internal.Parse
        HoYo.Internal.Types
        HoYo.Internal.Utils
        HoYo.Internal.Version

    hs-source-dirs:     src
    -- other-modules:
    default-language:   Haskell2010
    default-extensions: OverloadedStrings GeneralizedNewtypeDeriving LambdaCase FlexibleContexts
    ghc-options:        -Wall -Wno-duplicate-exports -Wno-unused-do-bind
    build-depends:
        base >=4 && <5,
        tomland >=1.3.3 && <1.4,
        microlens >=0.4.13 && <0.5,
        microlens-th >=0.4.3 && <0.5,
        text >=2.0 && <2.1,
        mtl >=2.2 && <2.3,
        transformers >= 0.5.6 && <0.6,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.5,
        time >=1.12 && <1.13,
        package-version >=0.3 && <1,
        optparse-applicative >=0.17 && <0.18,
        unordered-containers >=0.2.19 && <0.3

executable hoyo-cli
    main-is:          Main.hs
    other-modules:
    hs-source-dirs:   exe
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        optparse-applicative >=0.17 && <0.18,
        text >=2.0 && <2.1,
        hoyo
    default-extensions: OverloadedStrings LambdaCase

test-suite hoyo-test
    main-is:          Main.hs
    other-modules:    HoYo.Test.Gen
                      HoYo.Test.Bookmark
                      HoYo.Test.Utils
                      HoYo.Test.HoYo
                      HoYo.Test.Env
                      HoYo.Test.CLI.Parse
    -- other-extensions:
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        -- HUnit >=1.6 && <1.7,
        QuickCheck >=2.14 && <2.15,
        quickcheck-instances >=0.3.28 && <0.4,
        text >=2.0 && <2.1,
        filepath >=1.4 && <1.5,
        time >=1.12 && <1.13,
        microlens >=0.4.13 && <0.5,
        temporary >=1.3 && <2,
        directory >=1.3 && <1.4,
        optparse-applicative >=0.17 && <0.18,
        hoyo
    type:             exitcode-stdio-1.0
    default-extensions: OverloadedStrings
