cabal-version: 3.0
name:          hoyo
version:       0.5.0.0
license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    freddyjepringle@gmail.com
author:        Frederick Pringle
synopsis:      Bookmark directories for cd
description:
  hoyo is a command-line utility enabling easy bookmarking
  of directory for quick cd-like behaviour.

  See the [github readme](https://github.com/fpringle/hoyo#readme)
  for more information.
homepage:      https://github.com/fpringle/hoyo
category:      System
build-type:    Simple
extra-doc-files: CHANGELOG.md README.md

source-repository head
  type:     git
  location: git://github.com/fpringle/hoyo.git
  branch:   main

source-repository this
  type:     git
  location: git://github.com/fpringle/hoyo.git
  tag:      v0.4.0.0

common deps
  build-depends:
    base >=4 && <5,
    tomland,
    microlens,
    microlens-th,
    text,
    mtl,
    transformers,
    directory,
    filepath,
    time,
    package-version,
    optparse-applicative,
    unordered-containers,
    ansi-terminal,
    json,
    template-haskell

common warnings
  ghc-options: -Wall

library
    import:
      , deps
      , warnings
    exposed-modules:
        Hoyo
        Hoyo.Env
        Hoyo.Config
        Hoyo.Command
        Hoyo.Bookmark
        Hoyo.CLI.Parse
        Hoyo.CLI.Complete
        Hoyo.Internal.Env
        Hoyo.Internal.Config
        Hoyo.Internal.Command
        Hoyo.Internal.Bookmark
        Hoyo.Internal.Parse
        Hoyo.Internal.Types
        Hoyo.Internal.Utils
        Hoyo.Internal.Version

    hs-source-dirs:     src
    -- other-modules:
    default-language:   Haskell2010
    default-extensions: OverloadedStrings GeneralizedNewtypeDeriving LambdaCase FlexibleContexts
    ghc-options:        -Wall -Wno-duplicate-exports -Wno-unused-do-bind

executable hoyo-cli
    import:
      , deps
      , warnings
    main-is:          Main.hs
    other-modules:
    hs-source-dirs:   exe
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        hoyo
    default-extensions: OverloadedStrings LambdaCase

test-suite hoyo-test
    import:
      , deps
      , warnings
    main-is:          Main.hs
    other-modules:    Hoyo.Test.Gen
                      Hoyo.Test.Bookmark
                      Hoyo.Test.Utils
                      Hoyo.Test.Hoyo
                      Hoyo.Test.Env
                      Hoyo.Test.CLI.Parse
    -- other-extensions:
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        -- HUnit >=1.6 && <1.7,
        QuickCheck,
        quickcheck-instances,
        temporary,
        hoyo
    type:             exitcode-stdio-1.0
    default-extensions: OverloadedStrings
